[gd_scene load_steps=4 format=3 uid="uid://dxtqc6xb7i54d"]

[ext_resource type="Script" path="res://scripts/recallable.gd" id="1_foc7h"]
[ext_resource type="Script" path="res://scripts/recall_visualizer.gd" id="2_3m1p0"]
[ext_resource type="Material" uid="uid://fqowpgvv63wm" path="res://assets/materials/recall_preview.tres" id="3_vp38y"]

[node name="Recallable" type="Node3D" groups=["recallable"]]
script = ExtResource("1_foc7h")

[node name="PositionSampler" type="Timer" parent="."]
process_mode = 1
wait_time = 0.1
autostart = true

[node name="Visualizer" type="Node3D" parent="."]
top_level = true
visible = false
script = ExtResource("2_3m1p0")
line_resolution = 90.0

[node name="CSGPolygon3D" type="CSGPolygon3D" parent="Visualizer"]
layers = 5
polygon = PackedVector2Array(0, 0.1, 0.00697565, 0.0997564, 0.0139173, 0.0990268, 0.0207912, 0.0978148, 0.0275637, 0.0961262, 0.034202, 0.0939693, 0.0406737, 0.0913545, 0.0469472, 0.0882948, 0.0529919, 0.0848048, 0.0587785, 0.0809017, 0.0642788, 0.0766044, 0.0694658, 0.071934, 0.0743145, 0.0669131, 0.0788011, 0.0615661, 0.0829038, 0.0559193, 0.0866025, 0.05, 0.0898794, 0.0438371, 0.0927184, 0.0374607, 0.0951056, 0.0309017, 0.0970296, 0.0241922, 0.0984808, 0.0173648, 0.0994522, 0.0104528, 0.0999391, 0.00348995, 0.0999391, -0.00348995, 0.0994522, -0.0104528, 0.0984808, -0.0173648, 0.0970296, -0.0241922, 0.0951056, -0.0309017, 0.0927184, -0.0374607, 0.0898794, -0.0438371, 0.0866025, -0.05, 0.0829038, -0.0559193, 0.0788011, -0.0615661, 0.0743145, -0.0669131, 0.0694658, -0.071934, 0.0642788, -0.0766044, 0.0587785, -0.0809017, 0.0529919, -0.0848048, 0.0469472, -0.0882948, 0.0406737, -0.0913545, 0.034202, -0.0939693, 0.0275637, -0.0961262, 0.0207912, -0.0978148, 0.0139173, -0.0990268, 0.00697565, -0.0997564, 1.22461e-17, -0.1, -0.00697565, -0.0997564, -0.0139173, -0.0990268, -0.0207912, -0.0978148, -0.0275637, -0.0961262, -0.034202, -0.0939693, -0.0406737, -0.0913545, -0.0469472, -0.0882948, -0.0529919, -0.0848048, -0.0587785, -0.0809017, -0.0642788, -0.0766044, -0.0694658, -0.071934, -0.0743145, -0.0669131, -0.0788011, -0.0615661, -0.0829038, -0.0559193, -0.0866025, -0.05, -0.0898794, -0.0438371, -0.0927184, -0.0374607, -0.0951056, -0.0309017, -0.0970296, -0.0241922, -0.0984808, -0.0173648, -0.0994522, -0.0104528, -0.0999391, -0.00348995, -0.0999391, 0.00348995, -0.0994522, 0.0104528, -0.0984808, 0.0173648, -0.0970296, 0.0241922, -0.0951056, 0.0309017, -0.0927184, 0.0374607, -0.0898794, 0.0438371, -0.0866025, 0.05, -0.0829038, 0.0559193, -0.0788011, 0.0615661, -0.0743145, 0.0669131, -0.0694658, 0.071934, -0.0642788, 0.0766044, -0.0587785, 0.0809017, -0.0529919, 0.0848048, -0.0469472, 0.0882948, -0.0406737, 0.0913545, -0.034202, 0.0939693, -0.0275637, 0.0961262, -0.0207912, 0.0978148, -0.0139173, 0.0990268, -0.00697565, 0.0997564)
mode = 2
path_node = NodePath("../Path3D")
path_interval_type = 0
path_interval = 0.2
path_simplify_angle = 1.5
path_rotation = 2
path_local = true
path_continuous_u = true
path_u_distance = 1.0
path_joined = false
material = ExtResource("3_vp38y")

[node name="Path3D" type="Path3D" parent="Visualizer"]

[node name="FinalPositionMesh" type="MeshInstance3D" parent="Visualizer"]
layers = 4
material_override = ExtResource("3_vp38y")
cast_shadow = 0

[connection signal="timeout" from="PositionSampler" to="." method="_on_position_sampler_timeout"]
